# testLibTest

./: .gitignore  CMakeLists.txt  README.md  portfile.cmake  vcpkg.json
src/: mylibrary.cpp  mylibrary.h
